--- a/README.mb
+++ b/README.mb
@@ -1,2 +1,2 @@
 This is my web project =)
-![Image alt](https://github.com/foxta1ll/Myweb/raw/master/img/FireShot Capture 009 - MyWeb - /image.png)
+![FireShot Capture 009 - MyWeb - ](https://github.com/foxta1ll/Myweb/raw/master/img/image.png)
