--- a/README.mb
+++ b/README.mb
@@ -1,2 +1,2 @@
 This is my web project =)
-![FireShot Capture 009 - MyWeb - ](https://github.com/foxta1ll/Myweb/raw/master/img/image.png)
+![Иллюстрация к проекту](https://github.com/foxta1ll/Myweb/raw/master/Myweb/img/FireShot Capture 009 - MyWeb - .png)
