--- a/README.mb
+++ b/README.mb
@@ -1,2 +1,2 @@
 This is my web project =)
-![Image text](https://github.com/foxta1ll/Myweb/blob/master/img/FireShot%20Capture%20009%20-%20MyWeb%20-%20.png)
+![Image alt](https://github.com/foxta1ll/Myweb/blob/master/img/FireShot%20Capture%20009%20-%20MyWeb%20-%20.png)
